# OSPSuite.SimModel

./: .gitattributes  .gitignore  .gitmodules  OSPSuite.SimModel.sln  OSPSuite.SimModel4Nix.sln  README.md  RestorePackages.bat  appveyor.yml  buildLinux.sh  buildNix.sh  buildWindows.bat  packages.config
.github/workflows/: _build.yml  build-and-publish.yml  build-pr.yml
src/OSPSuite.SimModel/: .project  EntityProperties.cs  NativeLibraryPreload.cs  OSPSuite.SimModel.CentOS7.nuspec  OSPSuite.SimModel.MacOS.Arm64.nuspec  OSPSuite.SimModel.MacOS.nuspec  OSPSuite.SimModel.MacOS.x64.nuspec  OSPSuite.SimModel.Ubuntu18.nuspec  OSPSuite.SimModel.Ubuntu22.nuspec  OSPSuite.SimModel.csproj  OSPSuite.SimModel.nuspec  OSPSuite.SimModel.vcxproj  OSPSuite.SimModel.vcxproj.filters  ParameterProperties.cs  SimModelImportDefinitions.cs  Simulation.cs  SimulationOptions.cs  SimulationRunStatistics.cs  SolverWarning.cs  SpeciesProperties.cs  VariableValues.cs  XMLSchemaCache.cs  resource.h  version.h
src/OSPSuite.SimModelComp/: .cproject  .project  OSPSuite.SimModelComp.nuspec  OSPSuite.SimModelComp.vcxproj  OSPSuite.SimModelComp.vcxproj.filters  OSPSuite_SimModelComp.xml  SimModelComp.rc  resource.h  version.h
src/OSPSuite.SimModelNative/: .cproject  CMakeLists.txt  OSPSuite.SimModel.nuspec  OSPSuite.SimModel.vcxproj  OSPSuite.SimModelNative.vcxproj  OSPSuite.SimModelNative.vcxproj.filters  SimModel.rc  version.h
src/OSPSuite.SimModelNative/include/SimModel/: BooleanFormula.h  ConstantFormula.h  DESolver.h  DESolverProperties.h  DiffFormula.h  DivFormula.h  EntityWithCachedScaleFactor.h  ExplicitFormula.h  Formula.h  FormulaChange.h  FormulaFactory.h  GlobalConstants.h  HierarchicalFormulaObject.h  IfFormula.h  MathHelper.h  MatlabODEExporter.h  MaxFormula.h  MinFormula.h  ObjectBase.h  OutputSchema.h  PInvokeHelper.h  PInvokeQuantity.h  PInvokeSimulation.h  Parameter.h  ParameterFormula.h  ParameterSensitivity.h  PowerFormula.h  ProductFormula.h  Quantity.h  QuantityReference.h  Rcm.h  SimModelXMLHelper.h  SimpleProductFormula.h  Simulation.h  SimulationOptions.h  SimulationTask.h  Species.h  SpeciesInfo.h  SumFormula.h  Switch.h  (+7 more)
src/OSPSuite.SimModelNative/src/: BooleanFormula.cpp  ConstantFormula.cpp  CppODEExporter.cpp  DESolver.cpp  DESolverProperties.cpp  DiffFormula.cpp  DivFormula.cpp  ExplicitFormula.cpp  Formula.cpp  FormulaChange.cpp  GlobalConstants.cpp  IfFormula.cpp  MathHelper.cpp  MatlabODEExporter.cpp  MaxFormula.cpp  MinFormula.cpp  Observer.cpp  PInvokeHelper.cpp  PInvokeQuantity.cpp  PInvokeSimulation.cpp  Parameter.cpp  ParameterFormula.cpp  ParameterInfo.cpp  PowerFormula.cpp  ProductFormula.cpp  Quantity.cpp  QuantityInfo.cpp  SimpleProductFormula.cpp  Simulation.cpp  SimulationOptions.cpp  SimulationTask.cpp  Species.cpp  SumFormula.cpp  Switch.cpp  SwitchTask.cpp  TableFormula.cpp  TableFormulaWithOffset.cpp  TableFormulaWithXArgument.cpp  UnaryFunctionFormula.cpp  Variable.cpp  (+2 more)
src/OSPSuite.SysTool/: .cproject  .project  OSPSuite.SysTool.vcxproj  OSPSuite.SysTool.vcxproj.filters  SysTool.def  SysTool.rc  resource.h
src/OSPSuite.XMLWrapper/: .cproject  .project  OSPSuite.XMLWrapper.vcxproj  OSPSuite.XMLWrapper.vcxproj.filters  StdAfx.h  XMLWrapper.rc  resource.h
src/Schema/: OSPSuite.SimModel.xsd
src/properties/: common.props
tests/OSPSuite.SimModel.Tests/: OSPSuite.SimModel.Tests.csproj  OSPSuite.SimModel.Tests.vcxproj  OSPSuite.SimModel.Tests.vcxproj.filters  ReadMe.txt  SimulationSpecs.cs  stdafx.cpp
tests/SimModelComp/: Commands6_0.m
tests/TestAppCpp/: TestAppCpp.sln  TestAppCpp.vcxproj  TestAppCpp.vcxproj.filters
tests/TestAppNetCore/: Program.cs  TestAppNetCore.csproj
tests/TestData/: 12.0_Brockmoller2005_CPA.xml  2Species1Reaction_NegativeValuesTest.mbp3  AdultPopulation.xml  BCM_Platelet6Lit.xml  Brockmoller2005_CPA.7z  CPPExportTest01.xml  ConstZeroTableFormulation.pksim5  ConstZeroTableFormulation.xml  ConstantObservers.mbp3  ConstantObservers.xml  FIM_sim.xml  GrowConst.xml  IfFormulaInSwitchCondition.xml  InfinityTest.xml  InvalidSimmodelXML.xml  Modified_ScaleFactors_opt.xml  NaN_Inf_NegInf.xml  (+55 more)
(+172 files in other folders)
